Add domain authorizations none

--- a/javascripts/discourse/templates/user/billing/authorizations.hbs
+++ b/javascripts/discourse/templates/user/billing/authorizations.hbs
@@ -1,21 +1,27 @@
-<table class="table discourse-subscriptions-user-table">
-  <thead>
-    <th>{{theme-i18n
-        "discourse_subscriptions.user.authorizations.resource"
-      }}</th>
-    <th>{{theme-i18n
-        "discourse_subscriptions.user.authorizations.products"
-      }}</th>
-    <th>{{theme-i18n
-        "discourse_subscriptions.user.authorizations.domains"
-      }}</th>
-    <th>{{theme-i18n
-        "discourse_subscriptions.user.authorizations.domain_limit"
-      }}</th>
-  </thead>
-  <tbody>
-    {{#each model.subscription_domains as |data|}}
-      <SubscriptionData @data={{data}} />
-    {{/each}}
-  </tbody>
-</table>
+{{#if this.hasAuthorizations}}
+  <table class="table discourse-subscriptions-user-table">
+    <thead>
+      <th>{{theme-i18n
+          "discourse_subscriptions.user.authorizations.resource"
+        }}</th>
+      <th>{{theme-i18n
+          "discourse_subscriptions.user.authorizations.products"
+        }}</th>
+      <th>{{theme-i18n
+          "discourse_subscriptions.user.authorizations.domains"
+        }}</th>
+      <th>{{theme-i18n
+          "discourse_subscriptions.user.authorizations.domain_limit"
+        }}</th>
+    </thead>
+    <tbody>
+      {{#each model.subscription_domains as |data|}}
+        <SubscriptionData @data={{data}} />
+      {{/each}}
+    </tbody>
+  </table>
+{{else}}
+  <div class="alert alert-info">
+    {{theme-i18n "discourse_subscriptions.user.authorizations.none"}}
+  </div>
+{{/if}}
